Corrected scaling issue for icons on mobile
- decreased padding from 20px to 10px for social icons

--- a/src/css/page/index.css
+++ b/src/css/page/index.css
@@ -20,8 +20,8 @@ div.heading {
 }
 
 .social-icon {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .icon-button {
